--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
   provider: ^6.1.2
   http: ^1.2.2
   get_storage: ^2.1.1
+  dart_jsonwebtoken: ^2.14.2
 
 dev_dependencies:
   flutter_test:
