--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,7 @@ dependencies:
   http: ^1.2.2
   get_storage: ^2.1.1
   dart_jsonwebtoken: ^2.14.2
+  flutter_easy_faq: ^1.0.1
 
 dev_dependencies:
   flutter_test:
